[package]
name = "redical"
version = "0.1.0"
edition = "2021"

[lib]
name = "redical"
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "2.0.2"
bincode = "1.3.3"
serde = { version = "1.0.162", features = ["derive"] }
libc = "0.2"
nom = "6.0"
rrule = "0.10"
chrono = "0.4.19"
chrono-tz = "0.6.1"

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
anyhow = "1"
redis = "0.23"
lazy_static = "1"
redis-module-macros = "2.0.2"
redis-module = "2.0.2"

[features]
as-library = []
