[package]
name = "redical"
version = "0.1.0"
edition = "2021"

[lib]
name = "redical"
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "2.0.2"
bincode = "1.3.3"
serde = { version = "1.0.162", features = ["derive"] }
libc = "0.2"
nom = "6.0"
rrule = "0.10"
chrono = "0.4.19"
chrono-tz = "0.6.1"
lazy_static = "1.4.0"
regex = { version = "1.5.5", default-features = false, features = ["perf", "std"] }
rstar = { version = "0.11.0", features = ["serde"] }
geo = { version = "0.26.0", features = ["use-serde"] }
geohash = "0.13.0"

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
anyhow = "1"
redis = "0.23"
redis-module-macros = "2.0.2"
redis-module = "2.0.2"

[features]
as-library = []
