[package]
name = "redical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde = { version = "1.0.162", features = ["derive"] }
libc = "0.2"
nom = "6.0"
rrule = { version = "0.10", features = ["serde", "exrule"] }
chrono = "0.4.19"
chrono-tz = "0.6.1"
regex = { version = "1.5.5", default-features = false, features = ["perf", "std"] }
rstar = { version = "0.11.0", features = ["serde"] }
geo = { version = "0.26.0", features = ["use-serde"] }
geohash = "0.13.0"
num = "0.4.1"
unicode-segmentation = "1.10.1"
pretty_assertions_sorted = "1.2.3"
anyhow = "1"
redis-module-macros = "2.0.2"
redis-module = "2.0.2"
redis = "0.23"
itertools = "0.12.1"

# For tests directory.
[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }

[features]
as-library = []

[workspace]
members = [
    "redical_core",
    "redical_ical",
    "redical_redis",
    "redical_ical_afl_fuzz_targets",
]

default-members = [
    "redical_core",
    "redical_ical",
    "redical_redis",
]
