[package]
name = "redical_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
nom = "6.0"
rrule = { version = "0.10", features = ["serde", "exrule"] }
chrono = { workspace = true }
chrono-tz = { workspace = true }
lazy_static = "1.4.0"
regex = { version = "1.5.5", default-features = false, features = ["perf", "std"] }
rstar = { version = "0.11.0", features = ["serde"] }
geo = { version = "0.26.0", features = ["use-serde"] }
geohash = "0.13.0"
num = "0.4.1"
unicode-segmentation = "1.10.1"
redical_ical = { path = "../redical_ical" }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
