[package]
name = "redical_ical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
nom = "7.1.3"
nom_locate = "4.2.0"
itertools = { workspace = true }
unicode-segmentation = "1.10.1"

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
