[package]
name = "redical_redis"
version = "0.1.0"
edition = "2021"

[lib]
name = "redical"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "2.0.2"
redis-module-macros = "2.0.2"
bincode = "1.3.3"
serde = { workspace = true }
libc = "0.2"
chrono = { workspace = true }
chrono-tz = { workspace = true }
redical_core = { path = "../redical_core" }
redical_ical = { path = "../redical_ical" }
rayon = "1.10.0"
lazy_static = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
